fixed WeDealWidth component layout issues

--- a/src/app/components/CircularButton/CircularButton.module.css
+++ b/src/app/components/CircularButton/CircularButton.module.css
@@ -16,7 +16,23 @@
 }
 
 .smallCircle {
-    height: 100%;
-    width: 100%;
-    aspect-ratio: 1 / 1;
+    height: 140px;
+      width: 140px;
 }
+
+ @media (max-width: 1240px) {
+   .smallCircle {
+      
+   }
+ }
+
+ @media (max-width: 800px) {
+   .smallCircle {
+     height: 100%;
+      width: 100%;
+      max-height: 140px;
+      max-width: 140px;
+      aspect-ratio: 1 / 1;
+      font-size: 10px;
+   }
+ }
