--- a/src/app/components/WeDealWith/WeDealWith.module.css
+++ b/src/app/components/WeDealWith/WeDealWith.module.css
@@ -59,16 +59,14 @@
 }
 
 .rowWrapper {
-  width: 100%;
+  max-width: 80%;
 }
 
 .titleRow {
   display: flex !important;
   flex-direction: row;
-  margin-left: 10%;
-  margin-right: 10%;
   padding-bottom: 2rem;
-  gap: 0.5rem;
+  gap: 1rem;
 }
 
 .titleForMobile {
@@ -160,6 +158,15 @@
   }
 }
 
+.invisibleInMobile {
+}
+
+.visibleInMobile {
+  height: 0px;
+  width: 0px;
+  visibility: hidden;
+}
+
 /* Media query for mobile layout */
 @media (max-width: 1240px) {
   .container {
@@ -203,8 +210,7 @@
   }
 
   .text {
-    margin-left: 10%;
-    margin-right: 10%;
+
   }
 
   .duration {
@@ -255,9 +261,8 @@
   .circularButtonWrapper {
     place-self: center;
     padding-left: 0;
-    aspect-ratio: 1 / 1;
-    max-height: 140px;
-    max-width: 140px;
+    min-height: 140px;
+    min-width: 140px;
   }
 
   .preTitle {
@@ -273,7 +278,8 @@
     letter-spacing: 0px;
     white-space: normal;
     padding-bottom: 2rem;
-    text-align: left;
+    padding-left: 140px;
+    text-align: center;
     align-self: center;
   }
 
@@ -322,44 +328,14 @@
   .invisibleImage {
     padding-bottom: 10rem;
   }
-}
 
-@media ((min-width: 1240px) and (max-width: 1260px)) {
-  .preTitle {
-    padding-right: 0px;
-  }
-}
-
-@media ((min-width: 1000px) and (max-width: 1240px)) {
-
-  .title {
-    font-size: 38px;
-    line-height: 42px;
-  }
-}
-
-@media (max-width: 700px) {
-  .invisibleImage {
-    padding-bottom: 6rem;
-  }
-}
-
-.invisibleInMobile {
-}
-
-.visibleInMobile {
-  height: 0px;
-  width: 0px;
-  visibility: hidden;
-}
-
-@media (max-width: 1240px) {
   .invisibleInMobile {
     height: 0px;
     width: 0px;
     visibility: hidden;
     position: relative;
     right: 99999px;
+    min-height: 0;
   }
 
   .visibleInMobile {
@@ -367,5 +343,50 @@
     visibility: visible !important;
     height: auto;
     width: auto;
+  }
+
+  .rowWrapper {
+    display: block !important;
+    visibility: visible !important;
+    height: auto;
+    width: 100%;
+  }
+
+  .titleRow {
+    gap: 2rem;
+    width: 100%;
+    justify-content: space-evenly;
+  }
+
+  .mobileCircular {
+    flex: 0;
+  }
+}
+
+@media (max-width: 800px) {
+  .circularButtonWrapper {
+      min-height: 0px;
+      min-width: 0px;
+    }
+
+  .titleRow {
+    gap: 1rem;
+  }
+
+  .title {
+    text-align: left;
+  }
+
+  .mobileCircular {
+    flex: 1;
+  }
+  .title {
+    padding-left: 0px;
+  }
+}
+
+@media (max-width: 700px) {
+  .invisibleImage {
+    padding-bottom: 6rem;
   }
 }
